add my index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-HELLO WOORLD
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>梅志伟的个人简历</title>
+    <script src="js/jquery-3.1.1 (1).js"></script>
+    <script src="js/movingGallery.js"></script>
+    <link rel="stylesheet" href="css/mycss.css">
+</head>
+<body>
+<div class="content">
+    <div class="about-me">
+        <div class="book-frame">
+            <div class="book">
+                <div class="page" id="page4">
+                    <div class="page-back" style="background-color: #f05e65">
+                        <h1 style="font-size: 55px;margin-top: 34%;line-height: 225px">THANKS</h1>
+                        <h3 >Tel:13428833627</h3>
+                        <h3>E-mail:397951322@qq.com</h3>
+                        <h4><a href="#">MY CODEPEN</a></h4>
+
+                    </div>
+                    <div class="page-front" style="background-color:#dad6f6">
+                        <div class="works">
+                            <div class="pic">
+                                <img src="http://imglf2.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5RM0pLNUtGcEoydkdSVWlIdjh6MDBzZzIyYXNlZ2VZNi9RPT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
+                                     alt="1">
+                            </div>
+                            <div class="pic">
+                                <img src="http://imglf1.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5RK1l6c2d4dmdEbE1IVUFjanp1Qnl3YlFmY3YrUlF4MmV3PT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg" alt="">
+
+                            </div>
+                            <div class="pic">
+                                <img src="http://imglf1.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5RK1l6c2d4dmdEbE1IVUFjanp1Qnl3YlFmY3YrUlF4MmV3PT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg" alt="">
+
+                            </div>
+                            <div class="pic">
+                                <img src="http://imglf.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5ReURyMm84VFB1Q25WVzZLdGhybmxoK2VyRDJxWTBSbjV3PT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg" alt="">
+
+                            </div>
+                            <div class="pic">
+                                <img src="http://imglf.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5ReEl2WCt4VHJvQjBpaU0xcHhwb2p3eGhwWm1DWXpLRE1RPT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg" alt="">
+
+                            </div>
+                            <div class="pic">
+                                <img src="http://imglf1.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5RL1VwRDJLWExRb2tBejVueFF2YVZHcmFUZUc3VW9zSHNBPT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg" alt="">
+
+                            </div>
+                            <div class="pic">
+                                <img src="http://imglf0.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5ROTd3cktGZnVqK1lEYjI2VEw0QTJmTDJyeDlqYjV4Smx3PT0.png?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg" alt="">
+
+                            </div>
+                            <h2 style="text-align: right; margin-top:100%;z-index:2 ">try click them !</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="page" id="page3">
+                    <div class="page-back">
+                        <img src="http://imglf.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5RMVFHWk0yMTBFSUpYbURjNzZxd1pkbXptODFGUm4xbjNRPT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
+                             alt="fasf">
+
+                    </div>
+                    <div class="page-front">
+                        <img src="http://imglf.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5RNXJkZ21wR0lsRzdVL2xYYUxTNVZpTUdSelYyL2dWZlpRPT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
+                             alt="loading">
+                    </div>
+                </div>
+                <div class="page" id="page2">
+                    <div class="page-back">
+                        <img src="http://imglf1.nosdn.127.net/img/RUUrRzEvMkdlenV3SytnN0owRU5ROWNtNnMwOXBTVEVzeHp5TmlUMEF2YVVUbXMvN01TQmtRPT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
+                             alt="loading">
+                    </div>
+                    <div class="page-front">
+                        <img src="http://imglf.nosdn.127.net/img/RUUrRzEvMkdlenQySzViRFZOSWFlajhmdEs3amV3aWRjWm1qaFpmL1JxZmkvQzBpTzhndENnPT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg" alt="loading">
+                    </div>
+                </div>
+                <div class="page" id="page1">
+                    <div class="page-back" style="background-color: #f9df85;color: #2c4e65;">
+                        <h1 style="margin: 45% auto ;font-size: 58px; ">FRONTEND</h1>
+                        <h1>develop && design</h1>
+                    </div>
+                    <div class="page-front" style="background-color: #f05e65">
+                        <h1 style="margin: 45% auto ;font-size: 88px ">RESUME</h1>
+                        <h1>scroll me </h1>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+</body>
+</html>
